lemmy-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lemmy-ui
  namespace: lemmy
spec:
  selector:
    matchLabels:
      app: lemmy-ui
  template:
    metadata:
      labels:
        app: lemmy-ui
    spec:
      containers:
      - name: lemmy-ui
        image: dessalines/lemmy-ui:0.18.0
        ports:
        - containerPort: 1234
---
apiVersion: v1
kind: Service
metadata:
  name: lemmy-ui-service
  namespace: lemmy
spec:
  selector:
    app: lemmy-ui
  ports:
  - port: 80
    targetPort: 1234
  type: ClusterIP
