lemmy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lemmy
  namespace: lemmy
spec:
  selector:
    matchLabels:
      app: lemmy
  template:
    metadata:
      labels:
        app: lemmy
    spec:
      containers:
      - name: lemmy
        image: dessalines/lemmy:0.18.0
        volumeMounts:
        - name: config
          mountPath: "/config"
      volumes:
        - name: config
          secret:
            secretName: lemmy-config
---
apiVersion: v1
kind: Service
metadata:
  name: lemmy-service
  namespace: lemmy
spec:
  selector:
    app: lemmy
  ports:
  - port: 80
    targetPort: 8536
  type: ClusterIP
