pict-rs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pictrs
  namespace: lemmy
spec:
  selector:
    matchLabels:
      app: pictrs
  template:
    metadata:
      labels:
        app: pictrs
    spec:
      containers:
      - name: pictrs
        image: asonix/pictrs
        volumeMounts:
        - name: root
          mountPath: "/mnt"
      volumes:
        - name: root
          persistentVolumeClaim:
            claimName: pictrs-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: pictrs-service
  namespace: lemmy
spec:
  selector:
    app: pictrs
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
