lemmy-ingresses.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: lemmy-ui-ingress
  namespace: lemmy
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`example.com`)
      kind: Rule
      # Consider adding some middlewares here if you want to, like redirect to https?
      services:
        - name: lemmy-ui-service
          port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: lemmy-ingress
  namespace: lemmy
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`example.com`) && HeadersRegexp(`Accept`, `^application/`) || Host(`example.com`) && Method(`POST`) || Host(`example.com`) && PathPrefix(`/{path:(api|pictrs|feeds|nodeinfo|.well-known)}`)
      kind: Rule
      services:
        - name: lemmy-service
          port: 80
